--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "hover.css": "^2.3.2",
     "querystring": "^0.2.0",
     "vue": "^2.6.10",
+    "vue-gtag": "^1.1.2",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
