--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
   },
   "dependencies": {
     "animate.css": "^3.7.2",
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
     "hover.css": "^2.3.2",
+    "lodash": "^4.17.15",
+    "numeral": "^2.0.6",
     "querystring": "^0.2.0",
+    "typed.js": "^2.0.11",
     "vue": "^2.6.10",
     "vue-gtag": "^1.1.2",
     "vue-router": "^3.1.3"
