--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "selectize": "^0.12.6",
     "typed.js": "^2.0.11",
     "vue": "^2.6.10",
+    "vue-cookies": "^1.6.1",
     "vue-gtag": "^1.1.2",
     "vue-router": "^3.1.3"
   },
