--- a/package.json
+++ b/package.json
@@ -8,21 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "animate.css": "^3.7.2",
     "axios": "^0.19.2",
-    "c3": "^0.7.12",
-    "core-js": "^3.6.4",
-    "d3": "^5.15.0",
-    "favicon": "0.0.2",
-    "hover.css": "^2.3.2",
-    "jquery": "^3.4.1",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-colorschemes": "^0.4.0",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "numeral": "^2.0.6",
     "querystring": "^0.2.0",
-    "select2": "^4.0.13",
-    "selectize": "^0.12.6",
-    "typed.js": "^2.0.11",
     "vue": "^2.6.10",
     "vue-cookies": "^1.6.1",
     "vue-gtag": "^1.1.2",
@@ -35,6 +27,7 @@
     "@vue/cli-service": "^4.1.0",
     "@vue/eslint-config-prettier": "^5.0.0",
     "babel-eslint": "^10.0.3",
+    "core-js": "^3.6.4",
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-vue": "^5.0.0",
