--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "numeral": "^2.0.6",
     "querystring": "^0.2.0",
     "vue": "^2.6.10",
+    "vue-analytics": "^5.22.1",
     "vue-cookies": "^1.6.1",
-    "vue-gtag": "^1.1.2",
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
